Adapt trading bot to Bitpanda Fusion API